--- a/blog.html
+++ b/blog.html
@@ -762,7 +762,7 @@
 
 		<nav class="blog-nav" aria-label="Blog post list">
 			<ul>
-				<li><a href="#lds-post-7"> Speaker Testimonial Series: Tiago Guerrerio - When Design Meets Law: Bridging
+				<li><a href="#lds-post-7"> Speaker Testimonial Series: Tiago Guerreiro - When Design Meets Law: Bridging
 						Creative
 						Innovation and Legal Practice</a>
 				</li>
@@ -781,7 +781,7 @@
 		</nav>
 		<article id="lds-post-7" data-tags="Blog-Speakertestimonial">
 
-			<h2>LDS Blog #7. Speaker Testimonial Series: Tiago Guerrerio - When Design Meets Law: Bridging Creative
+			<h2>LDS Blog #7. Speaker Testimonial Series: Tiago Guerreiro - When Design Meets Law: Bridging Creative
 				Innovation and Legal Practice
 			</h2>
 			<div class="tags">
