--- a/program.html
+++ b/program.html
@@ -1223,7 +1223,7 @@
             <span class="party-emoji">🌟✨🎊</span>
 
             <div><strong>Thank you for an amazing Legal Design Summit 2025! </strong></div>
-            <div style="margin-top: 15px; font-size: 16px;">Details coming soon! 🚀</div>
+            <div style="margin-top: 15px; font-size: 16px;"> </div>
             <span class="party-emoji">🌟✨🎊</span>
           </div>
         </div>
