--- a/program.html
+++ b/program.html
@@ -1022,7 +1022,7 @@
           <div>As our program concludes for the day, it is the time for the Afterparty!
             This is the perfect opportunity
             to relax, connect with fellow attendees, and extend valuable discussions in a more informal and vibrant
-            setting. Keep an eye out for upcoming details and separate registration for this special evening! </div>
+            setting. Registration for the afterparty is available in your e-mail inbox! </div>
 
           <span class="party-emoji">🌟✨🎊</span>
         </div>
