updates to BF page

--- a/brainfactory.html
+++ b/brainfactory.html
@@ -665,7 +665,7 @@
 
     <div class="notification-section">
       <a href="mailto:brainfactory@legaldesignsummit.com" target="_blank" class="notify-btn">
-        Register for the Waitlist
+        BrainFactory is full!
       </a>
     </div>
 
@@ -805,7 +805,7 @@
           <div class="workshop-divider">
             <div class="notification-section">
               <a href="mailto:brainfactory@legaldesignsummit.com" target="_blank" class="notify-btn">
-                Register for the Waitlist
+                BrainFactory is full!
               </a>
             </div>
 
@@ -917,7 +917,7 @@
 
           <div class="notification-section">
             <a href="mailto:brainfactory@legaldesignsummit.com" target="_blank" class="notify-btn">
-              Register for the Waitlist
+              BrainFactory is full!
             </a>
           </div>
 
@@ -946,16 +946,9 @@
                     <div class="bubble"></div>
                     <h4>Q: How do I participate?</h4>
                     <p>
-                      If you would like to be added to the BrainFactory waiting list, please fill out
-                      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGxxc0eitud-iWdqRPBA41LnTlQoO31eaw_cg0uff0fUu82g/viewform?usp=header"
-                        style="color: #c30979;">this form</a>.
+                      BrainFactory is full for 2025. Check back again next time!
                     </p>
-                    <p>If a spot opens up, we will email you what sessions are open and ask you to reply via email to
-                      confirm you can take that seat. </p>
-                    <p>
-                      Check your spam filters or add “brainfactory@legaldesignsummit.com” to your safe senders list to
-                      ensure you receive our confirmation emails!
-                    </p>
+
                   </div>
 
                   <div class="faq-item">
